--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-helloworld
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>LA County New Cases by Day</title>
+</head>
+<body>
+    <div id="chartDiv" style="width: 90%; height: 90vh; margin: 0 auto;"></div>
+</body>
+<script src="https://code.jscharting.com/2.9.0/jscharting.js"></script>
+<script src="index.js"></script>
+</html>
