--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="indexStyle.css?v=200611">
-
+<script src="https://code.jquery.com/jquery-3.5.0.js"></script>
 <script src="https://code.jscharting.com/2.9.0/jscharting.js"></script>
-<script src="chartScript.js?v=2006122"></script>
+<script src="chartScriptHtml.js?v=200613"></script>
 </head>
 <body>
     <div id="smaChartDiv" class="chartContent"></div>
