--- a/indexalt.html
+++ b/indexalt.html
@@ -12,7 +12,7 @@
 <script src="https://code.jscharting.com/2.9.0/jscharting.js"></script>
 
 <script src="scripts/chartScript.js?v=200614"></script>
-<script src="scripts/dataReader.js?200615"></script>
+<script src="scripts/dataReader.js?2006152"></script>
 <script>
     createChartFromPageSource("LA County New Cases by Day");
 </script>
