Try to match graph in TIMES. Use page source data as default, changed to chart data to use if agencies count = agencies updated or in progress = false

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 <script src="https://code.jscharting.com/2.9.0/jscharting.js"></script>
 
 <script src="scripts/chartScript.js?v=200614"></script>
-<script src="scripts/dataReader.js?200614"></script>
+<script src="scripts/dataReader.js?2006153"></script>
 <script>
-    createChartFromGit("Los Angeles", "LA County New Cases by Day");
+    //createChartFromGit("Los Angeles", "LA County New Cases by Day");
+    createChartFromPageSource("LA County New Cases by Day");
 </script>
 
 </head>
