--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
 <script src="https://code.jscharting.com/2.9.0/jscharting.js"></script>
 
-<script src="scripts/chartScript.js?v=200614"></script>
-<script src="scripts/dataReader.js?2006153"></script>
+<script src="scripts/chartScript.js?v=200615"></script>
+<script src="scripts/dataReader.js?2006154"></script>
 <script>
     //createChartFromGit("Los Angeles", "LA County New Cases by Day");
-    createChartFromPageSource("LA County New Cases by Day");
+    createChartFromPageSource("LA County New Cases by Day", "https://www.latimes.com/projects/california-coronavirus-cases-tracking-outbreak/los-angeles-county/index.html");
 </script>
 
 </head>
