--- a/sanbernardino.html
+++ b/sanbernardino.html
@@ -11,10 +11,11 @@
 <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
 <script src="https://code.jscharting.com/2.9.0/jscharting.js"></script>
 
-<script src="scripts/chartScript.js?v=200614"></script>
-<script src="scripts/dataReader.js?200614"></script>
+<script src="scripts/chartScript.js?v=200615"></script>
+<script src="scripts/dataReader.js?2006154"></script>
 <script>
-    createChartFromGit("San Bernardino", "San Bernardino County New Cases by Day");
+    //createChartFromGit("San Bernardino", "San Bernardino County New Cases by Day");
+    createChartFromPageSource("San Bernardino County New Cases by Day", "https://www.latimes.com/projects/california-coronavirus-cases-tracking-outbreak/san-bernardino-county/index.html");
 </script>
 
 </head>
