--- a/sanbernardinoalt.html
+++ b/sanbernardinoalt.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>LA County New Cases by Day</title>
+<title>San Bernardino County New Cases by Day</title>
 
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 
@@ -14,8 +14,8 @@
 <script src="scripts/chartScript.js?v=200615"></script>
 <script src="scripts/dataReader.js?2006154"></script>
 <script>
-    createChartFromGit("Los Angeles", "LA County New Cases by Day");
-    //createChartFromPageSource("LA County New Cases by Day", "https://www.latimes.com/projects/california-coronavirus-cases-tracking-outbreak/los-angeles-county/index.html");
+    createChartFromGit("San Bernardino", "San Bernardino County New Cases by Day");
+    //createChartFromPageSource("San Bernardino County New Cases by Day", "https://www.latimes.com/projects/california-coronavirus-cases-tracking-outbreak/san-bernardino-county/index.html");
 </script>
 
 </head>
