debug issue with la webscrape

--- a/indexalt.html
+++ b/indexalt.html
@@ -14,10 +14,7 @@
 <script src="scripts/chartScript.js?v=2006152307"></script>
 <script src="scripts/dataReader.js?2006152307"></script>
 <script>
-    createChartFromPageSource(
-            "LA County New Cases by Day",
-            "https://www.latimes.com/projects/california-coronavirus-cases-tracking-outbreak/los-angeles-county/index.html",
-            "SMA");
+    createChartFromPageSource("LA County New Cases by Day","https://www.latimes.com/projects/california-coronavirus-cases-tracking-outbreak/los-angeles-county/index.html","SMA");
 </script>
 
 </head>
