--- a/cities.html
+++ b/cities.html
@@ -6,12 +6,12 @@
 
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 
-<link rel="stylesheet" href="styles/cityStyle.css?v=2006182258">
+<link rel="stylesheet" href="styles/cityStyle.css?v=2006191423">
 
 <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
 <script src="https://code.jscharting.com/2.9.0/jscharting.js"></script>
 
-<script src="scripts/chartScript.js?v=2006182258"></script>
+<script src="scripts/chartScript.js?v=2006191423"></script>
 <script src="scripts/dataReader.js?2006182258"></script>
 <script>
     let cities = ["Alhambra", "Arcadia", "Azusa", "Duarte", "El Monte", "Glendora", "Monrovia", "Montebello", "Monterey Park", 
@@ -46,7 +46,8 @@
                 onclick='createChartForCities(cities, "chartDiv", "EMA");'>
             <label for="radioEma">EMA</label>
         </div>
-        <br>
     </div>
+    
+    Raw data from <a href="https://raw.githubusercontent.com/datadesk/california-coronavirus-data/master/latimes-place-totals.csv">LA Times</a>
 </body>
 </html>
