--- a/sanbernardinoalt.html
+++ b/sanbernardinoalt.html
@@ -6,12 +6,12 @@
 
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 
-<link rel="stylesheet" href="styles/indexStyle.css?v=2006171612">
+<link rel="stylesheet" href="styles/indexStyle.css?v=2006191423">
 
 <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
 <script src="https://code.jscharting.com/2.9.0/jscharting.js"></script>
 
-<script src="scripts/chartScript.js?v=2006182258"></script>
+<script src="scripts/chartScript.js?v=2006191423"></script>
 <script src="scripts/dataReader.js?2006182258"></script>
 <script>
     createChartFromGit("San Bernardino", "San Bernardino County New Cases by Day", "SMA");
@@ -32,7 +32,8 @@
                 onclick='createChartFromGit("San Bernardino", "San Bernardino County New Cases by Day", "EMA");'>
             <label for="radioEma">EMA</label>
         </div>
-        <br>
     </div>
+    
+    Raw data from <a href="https://raw.githubusercontent.com/datadesk/california-coronavirus-data/master/latimes-county-totals.csv">LA Times</a>
 </body>
 </html>
