--- a/sanbernardino.html
+++ b/sanbernardino.html
@@ -11,10 +11,10 @@
 <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
 <script src="https://code.jscharting.com/2.9.0/jscharting.js"></script>
 
-<script src="scripts/chartScript.js?v=2006191423"></script>
+<script src="scripts/chartScript.js?v=2006191501"></script>
 <script src="scripts/dataReader.js?2006182258"></script>
 <script>
-    createChartFromPageSource("San Bernardino County New Cases by Day", "https://www.latimes.com/projects/california-coronavirus-cases-tracking-outbreak/san-bernardino-county/index.html", "SMA");
+    createChartFromPageSource("San Bernardino County New Cases by Day", "https://www.latimes.com/projects/california-coronavirus-cases-tracking-outbreak/san-bernardino-county/index.html", "MA");
 </script>
 
 </head>
@@ -25,7 +25,7 @@
         <div class="radio-toolbar">
             <input type="radio" id="radioMa" name="avgType"
                 value="MA" checked
-                onclick='createChartFromPageSource("San Bernardino County New Cases by Day", "https://www.latimes.com/projects/california-coronavirus-cases-tracking-outbreak/san-bernardino-county/index.html", "SMA")'>
+                onclick='createChartFromPageSource("San Bernardino County New Cases by Day", "https://www.latimes.com/projects/california-coronavirus-cases-tracking-outbreak/san-bernardino-county/index.html", "MA")'>
             <label for="radioMa">MA</label> 
             <input type="radio"
                 id="radioEma" name="avgType" value="EMA"
