--- a/cities.html
+++ b/cities.html
@@ -11,12 +11,13 @@
 <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
 <script src="https://code.jscharting.com/2.9.0/jscharting.js"></script>
 
-<script src="scripts/chartScript.js?v=202006201214"></script>
-<script src="scripts/dataReader.js?202006201214"></script>
+<script src="scripts/dataReader.js?202006261629"></script>
+<script src="scripts/calcScript.js?202006261629"></script>
+<script src="scripts/chartScript.js?v=202006261629"></script>
 <script>
     let cities = ["Alhambra", "Arcadia", "Azusa", "Duarte", "El Monte", "Glendora", "Monrovia", "Montebello", "Monterey Park", 
         "Rosemead", "San Dimas", "San Gabriel", "San Marino", "Santa Monica", "Temple City", "Upland"];
-    createChartForCities(cities, "chartDiv", "MA");
+    chartForCities(cities, "chartDiv", "MA");
 </script>
 </head>
 <body>
@@ -40,10 +41,10 @@
     <div class="center">
         <div class="radio-toolbar">
             <input type="radio" id="radioMa" name="avgType" value="MA" checked
-                onclick='createChartForCities(cities, "chartDiv", "MA");'>
+                onclick='chartForCities(cities, "chartDiv", "MA");'>
             <label for="radioMa">MA</label> 
             <input type="radio" id="radioEma" name="avgType" value="EMA"
-                onclick='createChartForCities(cities, "chartDiv", "EMA");'>
+                onclick='chartForCities(cities, "chartDiv", "EMA");'>
             <label for="radioEma">EMA</label>
         </div>
     </div>
