--- a/index.html
+++ b/index.html
@@ -6,39 +6,34 @@
 
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 
-<link rel="stylesheet" href="styles/indexStyle.css?v=202006271557">
+<link rel="stylesheet" href="styles/indexStyle.css?v=202006201214">
 
 <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
 <script src="https://code.jscharting.com/2.9.0/jscharting.js"></script>
 
-<script src="scripts/dataReader.js?202006262230"></script>
-<script src="scripts/calcScript.js?202006262230"></script>
-<script src="scripts/chartScript.js?v=202006262230"></script>
+<script src="scripts/chartScript.js?v=202006201214"></script>
+<script src="scripts/dataReader.js?202006201214"></script>
 <script>
-    chartFromPageSource("LA County", "https://www.latimes.com/projects/california-coronavirus-cases-tracking-outbreak/los-angeles-county/index.html", "MA");
-</script> 
+    createChartFromPageSource("LA County New Cases by Day","https://www.latimes.com/projects/california-coronavirus-cases-tracking-outbreak/los-angeles-county/index.html","MA");
+</script>
+
 </head>
-<body class="page-container">
-    <div>
-        <div id="chartDiv" class="chartContent"></div>
-        <div id="hospitalizationChartDiv" class="chartContent"></div>
-        <div id="deathsChartDiv" class="chartContent"></div>
+<body>
+    <div id="chartDiv" class="chartContent"></div>
 
-        Raw data from <a href="https://github.com/datadesk/california-coronavirus-data/blob/master/README.md">LA Times</a>
-    </div>
-
-    <div class="footer">
+    <div class="center">
         <div class="radio-toolbar">
             <input type="radio" id="radioMa" name="avgType"
                 value="MA" checked
-                onclick='chartFromPageSource("LA County", "https://www.latimes.com/projects/california-coronavirus-cases-tracking-outbreak/los-angeles-county/index.html", "MA");'>
+                onclick='createChartFromPageSource("LA County New Cases by Day", "https://www.latimes.com/projects/california-coronavirus-cases-tracking-outbreak/los-angeles-county/index.html", "MA");'>
             <label for="radioMa">MA</label> 
             <input type="radio"
                 id="radioEma" name="avgType" value="EMA"
-                onclick='chartFromPageSource("LA County", "https://www.latimes.com/projects/california-coronavirus-cases-tracking-outbreak/los-angeles-county/index.html", "EMA");'>
+                onclick='createChartFromPageSource("LA County New Cases by Day", "https://www.latimes.com/projects/california-coronavirus-cases-tracking-outbreak/los-angeles-county/index.html", "EMA");'>
             <label for="radioEma">EMA</label>
         </div>
     </div>
     
+    Raw data from <a href="https://raw.githubusercontent.com/datadesk/california-coronavirus-data/master/latimes-county-totals.csv">LA Times</a>
 </body>
 </html>
