--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 
-<link rel="stylesheet" href="styles/indexStyle.css?v=202007020004">
+<link rel="stylesheet" href="styles/indexStyle.css?v=202007031702">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://code.jscharting.com/2.9.0/jscharting.js"></script>
 <script src="scripts/dom-to-image.min.js"></script>
 
-<script src="scripts/dataReader.js?v=202007021823"></script>
-<script src="scripts/calcScript.js?v=202007020004"></script>
-<script src="scripts/chartScript.js?v=202007020004"></script>
+<script src="scripts/dataReader.js?v=202007031702"></script>
+<script src="scripts/calcScript.js?v=202007031702"></script>
+<script src="scripts/chartScript.js?v=202007031702"></script>
 <script>
     chartFromPageSource("LA County", "https://www.latimes.com/projects/california-coronavirus-cases-tracking-outbreak/los-angeles-county/index.html", "MA");
 
@@ -32,6 +32,13 @@
         id="SS" value="SS"
         onclick='screenShot();'>
     </div>
+
+    <div class="card-container">
+        <div id="casesCard" class="card"></div>
+        <div id="hospCard" class="card"></div>
+        <div id="deathsCard" class="card"></div>
+    </div>
+    
     <div class="page-container">
         <div>
             <div id="chartDiv" class="chartContent"></div>
