--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <script src="https://code.jscharting.com/2.9.0/jscharting.js"></script>
 <script src="scripts/dom-to-image.min.js"></script>
 
-<script src="scripts/dataReader.js?v=202007041252"></script>
+<script src="scripts/dataReader.js?v=202007050041"></script>
 <script src="scripts/calcScript.js?v=202007041252"></script>
 <script src="scripts/chartScript.js?v=202007031702"></script>
 <script>
@@ -41,6 +41,8 @@
     
     <div class="page-container">
         <div>
+            <ul><li>Expect low totals over the holiday weekend. Los Angeles County has said it will not be reporting new cases due to a technology upgrade.</li></ul><br><br>
+
             <div id="chartDiv" class="chartContent"></div>
             <div id="hospitalizationChartDiv" class="chartContent"></div>
             <div id="deathsChartDiv" class="chartContent"></div>
