Added title to cities page and changed titles for each chart to only city name

--- a/cities.html
+++ b/cities.html
@@ -6,12 +6,12 @@
 
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 
-<link rel="stylesheet" href="styles/cityStyle.css?v=202007041100">
+<link rel="stylesheet" href="styles/cityStyle.css?v=202007101217">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://code.jscharting.com/2.9.0/jscharting.js"></script>
 
-<script src="scripts/dataReader.js?202007050041"></script>
+<script src="scripts/dataReader.js?202007101217"></script>
 <script src="scripts/calcScript.js?202007041252"></script>
 <script src="scripts/chartScript.js?v=202007031702"></script>
 <script>
@@ -21,6 +21,7 @@
 </script>
 </head>
 <body class="page-container">
+    <div class="page-title">New Cases by Day per City</div>
     <div>
         <div id="chartDivAlhambra" class="chartContent"></div>
         <div id="chartDivArcadia" class="chartContent"></div>
