added SS screenshot function to cities page

--- a/cities.html
+++ b/cities.html
@@ -6,10 +6,11 @@
 
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 
-<link rel="stylesheet" href="styles/cityStyle.css?v=202007121624">
+<link rel="stylesheet" href="styles/cityStyle.css?v=202007121856">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://code.jscharting.com/2.9.0/jscharting.js"></script>
+<script src="scripts/dom-to-image.min.js"></script>
 
 <script src="scripts/dataObjectScript.js?v=202007121624"></script>
 <script src="scripts/utilityScript.js?v=202007121624"></script>
@@ -19,30 +20,44 @@
     let cities = ["Alhambra", "Arcadia", "Azusa", "Duarte", "El Monte", "Glendora", "Monrovia", "Montebello", "Monterey Park", 
         "Rosemead", "San Dimas", "San Gabriel", "San Marino", "Santa Monica", "Temple City", "Upland"];
     chartForCities(cities, "chartDiv", "MA");
+
+    function screenShot() {
+        let t = getTimestampExt();
+        // setTimeout(() => {printDiv("#chart-container", "Cities", t);}, 5000);
+        printDiv("#chart-container", "Cities", t);
+    }
 </script>
 </head>
 <body class="page-container">
-    <div class="page-title">New Cases by Day per City</div>
     <div>
-        <div id="chartDivAlhambra" class="chartContent"></div>
-        <div id="chartDivArcadia" class="chartContent"></div>
-        <div id="chartDivAzusa" class="chartContent"></div>
-        <div id="chartDivDuarte" class="chartContent"></div>
-        <div id="chartDivEl Monte" class="chartContent"></div>
-        <div id="chartDivGlendora" class="chartContent"></div>
-        <div id="chartDivMonrovia" class="chartContent"></div>
-        <div id="chartDivMontebello" class="chartContent"></div>
-        <div id="chartDivMonterey Park" class="chartContent"></div>
-        <div id="chartDivRosemead" class="chartContent"></div>
-        <div id="chartDivSan Dimas" class="chartContent"></div>
-        <div id="chartDivSan Gabriel" class="chartContent"></div>
-        <div id="chartDivSan Marino" class="chartContent"></div>
-        <div id="chartDivSanta Monica" class="chartContent"></div>
-        <div id="chartDivTemple City" class="chartContent"></div>
-        <div id="chartDivUpland" class="chartContent"></div>
-
-        Raw data from <a href="https://raw.githubusercontent.com/datadesk/california-coronavirus-data/master/latimes-place-totals.csv">LA Times</a>
+        <input type="button" class="hidden-button"
+        id="SS" value="SS"
+        onclick='screenShot();'>
     </div>
+
+    <div id="chart-container" class="chart-area">
+        <div class="page-title">New Cases by Day per City</div>
+        <div>
+            <div id="chartDivAlhambra" class="chartContent"></div>
+            <div id="chartDivArcadia" class="chartContent"></div>
+            <div id="chartDivAzusa" class="chartContent"></div>
+            <div id="chartDivDuarte" class="chartContent"></div>
+            <div id="chartDivEl Monte" class="chartContent"></div>
+            <div id="chartDivGlendora" class="chartContent"></div>
+            <div id="chartDivMonrovia" class="chartContent"></div>
+            <div id="chartDivMontebello" class="chartContent"></div>
+            <div id="chartDivMonterey Park" class="chartContent"></div>
+            <div id="chartDivRosemead" class="chartContent"></div>
+            <div id="chartDivSan Dimas" class="chartContent"></div>
+            <div id="chartDivSan Gabriel" class="chartContent"></div>
+            <div id="chartDivSan Marino" class="chartContent"></div>
+            <div id="chartDivSanta Monica" class="chartContent"></div>
+            <div id="chartDivTemple City" class="chartContent"></div>
+            <div id="chartDivUpland" class="chartContent"></div>
+        </div>
+    </div>
+
+    <div>Raw data from <a href="https://raw.githubusercontent.com/datadesk/california-coronavirus-data/master/latimes-place-totals.csv">LA Times</a></div>
 
     <div class="footer">
         <div class="radio-toolbar">
