--- a/cities.html
+++ b/cities.html
@@ -6,16 +6,17 @@
 
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 
-<link rel="stylesheet" href="styles/cityStyle.css?v=202007221813">
+<link rel="stylesheet" href="styles/cityStyle.css?v=202102122123">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://code.jscharting.com/2.9.0/jscharting.js"></script>
 <script src="scripts/dom-to-image.min.js"></script>
+<script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
+<script src="https://code.jscharting.com/2.9.0/jscharting.js"></script>
 
-<script src="scripts/dataObjectScript.js?v=202008081219"></script>
-<script src="scripts/utilityScript.js?v=202007241732"></script>
-<script src="scripts/citiesDataReaderScript.js?v=202007121624"></script>
-<script src="scripts/chartScript.js?v=202007121624"></script>
+<script src="scripts/dataObjectScript.js?v=202102122123"></script>
+<script src="scripts/utilityScript.js?v=202102122123"></script>
+<script src="scripts/citiesDataReaderScript.js?v=202102122123"></script>
+<script src="scripts/chartScript.js?v=202102122123"></script>
 <script>
     let cities = ["Alhambra", "Arcadia", "Azusa", "Duarte", "El Monte", "Glendora", "Monrovia", "Montebello", "Monterey Park", 
         "Rosemead", "San Dimas", "San Gabriel", "San Marino", "Santa Monica", "Temple City", "Upland"];
